# NecoRAG

./: .env.example  .gitignore  .python-version  AUTO_VERSION_SKILL_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_UPDATE.md  DEBUG_PANEL_SUMMARY.md  DEVELOPMENT_ENVIRONMENT.md  GITEE_PUSH_GUIDE.md  GIT_CREDENTIALS_GUIDE.md  KNOWLEDGE_DASHBOARD_COMPLETE_REPORT.md  LICENSE  PROJECT_COMPLETE.md  PROJECT_FINAL_STATUS.md  PROJECT_FINAL_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES_v3.1.0.md  ROADMAP.md  VERSION_README.md  VERSION_SYSTEM_SUMMARY.md  WIKI_README.md  WIKI_SYNC_REPORT.md  auto_version_control.md  check_quotes.py  check_quotes2.py  create_gitee_repo.py  dashboard_demo.py  example_usage.py  learning_data_export.json  project_stats_detailed.csv  pyproject.toml  requirements.txt  security_module_stats.csv  src_statistics.csv  start_dashboard.py  test_imports.py
.qoder/commands/: codecount.md  sync_repos.md
3rd/: DEPLOYMENT_GUIDE.md  DOCKER_IMAGES_GUIDE.md  DOCKER_IMAGE_SIZES_REPORT.md  DOCKER_IMPORT_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  REQUIREMENTS_UPDATE_SUMMARY.md  SMART_REGISTRY_SELECTION.md  SMART_SELECTION_AND_CAPACITY.md  STRUCTURE.md  TECH_STACK.md  deployment_quickref.md  requirements.txt  selection_guide.md  techstack.md  third_party_systems.md
design/: COT_CHAIN_OF_THOUGHT.md  DESIGN_UPDATE_REPORT.md  MULTI_USER_SYSTEM_DESIGN.md  README.md  SMART_ROUTING_FUSION_ENGINE.md  STRUCTURE_OPTIMIZATION_SUMMARY.md  USER_SYSTEM_IMPLEMENTATION_REPORT.md  architecture_framework.md  completion_progress_report.md  design.md  interface_module_summary.md  missing_modules_analysis.md  refer.md
devops/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
docs/: README.md
example/: README.md  debug_panel_demo.py  domain_weight_example.py  example_usage.py  intent_initialization_complete.py  knowledge_base_example.py  knowledge_base_integration.py  production_debug_example.py
interface/: README.md  __init__.py  api.py  example_client.py  knowledge_service.py  main.py  models.py  websocket.py
log/: CHANGELOG.md  DOCS_REORGANIZATION_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_FINAL_STATUS.md  PROJECT_FINAL_SUMMARY.md  README_COMPLETION_REPORT.md
necorag/: __init__.py
opdev/: docker-compose.minimal.yml
src/: MODULE_ARCHITECTURE.md  README.md  __init__.py  necorag.py
tests/: README.md  __init__.py  conftest.py  demo_test_runner.py  integration_test.py  performance_test.py  test_backends.py  test_core.py  test_dashboard.py  test_domain.py  test_memory.py  test_necorag.py  test_perception.py  test_refinement.py  test_response.py  test_retrieval.py  test_runner.py  test_suite.py  verify_v3.2.0.py
tools/: AUTO_VERSION_SKILL_GUIDE.md  AUTO_VERSION_TEST_REPORT.md  CODE_COUNT_GUIDE.md  CODE_COUNT_README.md  CODE_COUNT_SUMMARY.md  DASHBOARD_QUICKREF.md  GITHUB_SYNC_GUIDE.md  KNOWLEDGE_DASHBOARD_COMPLETE_REPORT.md  PROJECT_STATISTICS_README.md  README.md  SYNC_SETUP_COMPLETE.md  VERSION_MANAGER_GUIDE.md  auto_version_config.json  auto_version_control.py  code-count-quickref.md  code-count.py  code-count.sh  code_count_v3.0.0-alpha_20260319_122007.md  code_count_v3.0.0-alpha_20260319_122145.md  code_count_v3.2.0-alpha_20260319_155535.md  demo_report.md  project_full_statistics.csv  project_statistics.csv  project_statistics.md  project_statistics.py  push_to_gitee.py  start_dashboard.bat  start_dashboard.py  start_dashboard.sh  start_knowledge_dashboard.sh  sync_repos.py  sync_to_github.sh  sync_wiki_simple.py  sync_wiki_to_gitee.py  test_imports.py  test_init.py  version_examples.sh  version_manager.py
(+825 files in other folders)
