[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "necorag"
version = "2.0.1-alpha"
description = "NecoRAG - Neuro-Cognitive Retrieval-Augmented Generation Framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "NecoRAG Team"}
]
keywords = ["rag", "ai", "llm", "retrieval", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

intent = [
    "jieba>=0.42.1",
]

intent-ml = [
    "jieba>=0.42.1",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

intent-fasttext = [
    "jieba>=0.42.1",
    "fasttext-wheel>=0.9.2",
]

scheduler = [
    "apscheduler>=3.10.0",
]

scheduler-distributed = [
    "celery>=5.3.0",
    "redis>=4.5.0",
]

dashboard = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]

monitoring = [
    "prometheus-client>=0.19.0",
]

security = [
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/NecoRAG/core"
Documentation = "https://github.com/NecoRAG/core#readme"
Repository = "https://github.com/NecoRAG/core.git"
Dashboard = "http://localhost:8000/knowledge-health"

[tool.setuptools.packages.find]
where = ["."]
include = ["necorag*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
